<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yallah2"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/btn4"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:text="@string/vidange"
        android:textSize="20sp"
        app:backgroundTint="@color/ha2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:text="@string/boutique"
        android:textSize="20sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:text="@string/cafeteria"
        android:textSize="20sp"
        app:backgroundTint="?android:attr/colorActivatedHighlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="257dp"
        android:layout_height="79dp"
        android:text="@string/lavage"
        android:textSize="20sp"
        app:backgroundTint="@color/h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />




</androidx.constraintlayout.widget.ConstraintLayout>